--- a/mainpage.html
+++ b/mainpage.html
@@ -5,6 +5,7 @@
           <link href="css/styles.css" rel="stylesheet">
           <link rel="preconnect" href="https://fonts.gstatic.com">
           <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+          <link rel="icon" href="media/apple.png">
           <meta content="text/html; charset=utf-8" />
     </head>  
 
@@ -13,7 +14,9 @@
     <body>     
 
         <div class = "nav">
-            <img src = "media/apple.png" id = "apple">
+            <img src = "media/menu.png">
+            <img src = "media/apple.png">
+            <img src = "media/bag.png">
         </div>
         <section>
             <div class = "black">
@@ -21,7 +24,7 @@
                     <h2><strong>iLove</strong> U pro</h2>
                 </div>
                 <p>more than pasta</p>
-                <img src="media/2.jpg">
+                <img src="media/1.jpg">
             </div>
 
             <div class = "white">
@@ -29,7 +32,7 @@
                     <h2><strong>iMiss</strong> U max</h2>
                 </div>
                 <p>so much</p>
-                <img src="media/1.jpg">
+                <img src="media/2.JPG">
             </div>
 
             <div class = "black">
@@ -37,15 +40,15 @@
                     <h2><strong>iAdore</strong> U plus</h2>
                 </div>
                 <p>more than Harry Styles</p>
-                <img src="media/2.jpg">
+                <img src="media/3.JPG">
             </div>
 
             <div class = "white">
                 <div class = "product">
                     <h2><strong>iFuck</strong> w/ U</h2>
                 </div>
-                <p> in private..</p>
-                <img src="media/1.jpg">
+                <p> in private...</p>
+                <img src="media/4.jpg">
             </div>
 
             <div class = "black">
@@ -53,10 +56,13 @@
                     <h2><strong>iSend</strong> U kisses</h2>
                 </div>
                 <p>all over you</p>
-                <img src="media/2.jpg">
+                <img src="media/5.jpg">
             </div>
         </section>
 
+        <footer>
+            For more information contact  <a href = "https://wa.me/96171289696?text=I%20miss%20you%20%20sweetface%20♥">  SweetFace </a>
+        </footer>
 
 
     </body>
